compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_with_public_function_with_correct_arity_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport module\npub fn main() {\n    use <- wibble\n    1\n}"
---
----- SOURCE CODE
-- module.gleam

pub fn wibble(_) {
    1
}

-- main.gleam

import module
pub fn main() {
    use <- wibble
    1
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:4:12
  │
4 │     use <- wibble
  │            ^^^^^^

The name `wibble` is not in scope here.
Did you mean one of these:

  - module.wibble
